<resources>
    <string name="app_name_title">My Warwick</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_account_settings">Account settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="me">Me</string>
    <string name="notifications">Alerts</string>
    <string name="activity">Activity</string>
    <string name="news">News</string>
    <string name="feedback">Feedback</string>
    <string name="search">Search</string>
    <string name="search_warwick">Search Warwick…</string>
    <string name="account_settings">IT Services account</string>
    <string name="user_agent_prefix">MyWarwick/</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="choose_mywarwick_server">Choose My Warwick server</string>
    <string-array name="mywarwick_server_list">
        <item>Development</item>
        <item>Production</item>
        <item>Test</item>
        <item>Custom</item>
    </string-array>
    <string-array name="mywarwick_server_list_values">
        <item>https://my-dev.warwick.ac.uk</item>
        <item>https://my.warwick.ac.uk</item>
        <item>https://my-test.warwick.ac.uk</item>
        <item>__custom__</item>
    </string-array>

    <string name="app_settings">App settings</string>
    <string name="custom_server_address">Custom server address</string>

    <string name="default_notification_channel_id">alerts</string>

    <string name="bridge">
        (function androidBridge(global) {
            if (global.MyWarwickNative) {
                console.log(\'Bridge already connected\');
            } else {
                console.log(\'Connecting bridge\');
                var native = {};
                global.MyWarwickNative = native;

                native.latestBackgroundId = 8;

                native.setUser = function setUser(user) {
                    MyWarwickAndroid.setUser(JSON.stringify(user));
                };

                native.setWebSignOnUrls = function setWebSignOnUrls(signInUrl, signOutUrl) {
                    MyWarwickAndroid.setWebSignOnUrls(signInUrl, signOutUrl);
                };

                native.setUnreadNotificationCount = function setUnreadNotificationCount(count) {
                    MyWarwickAndroid.setUnreadNotificationCount(count);
                };

                native.setPath = function setPath(path) {
                    MyWarwickAndroid.setPath(path);
                };

                native.ready = function ready() {
                    MyWarwickAndroid.ready();
                };

                native.getAppBuild = function getAppBuild() {
                    return MyWarwickAndroid.getAppBuild();
                };

                native.getAppVersion = function getAppVersion() {
                    return MyWarwickAndroid.getAppVersion();
                };

                native.loadDeviceDetails = function loadDeviceDetails() {
                    return MyWarwickAndroid.loadDeviceDetails();
                };

                native.launchTour = function launchTour() {
                    return MyWarwickAndroid.launchTour();
                };

                native.setBackgroundToDisplay = function setBackgroundToDisplay(bgId, isHighContrast) {
                    return MyWarwickAndroid.setBackgroundToDisplay(bgId, isHighContrast);
                };

                native.setTimetableToken = function setTimetableToken(token) {
                    MyWarwickAndroid.setTimetableToken(token);
                };

                native.setTimetableNotificationsEnabled = function setTimetableNotificationsEnabled(enabled) {
                    MyWarwickAndroid.setTimetableNotificationsEnabled(enabled);
                };

                native.setTimetableNotificationTiming = function setTimetableNotificationTiming(timing) {
                    MyWarwickAndroid.setTimetableNotificationTiming(timing);
                };

                native.setTimetableNotificationsSoundEnabled = function setTimetableNotificationsSoundEnabled(enabled) {
                    MyWarwickAndroid.setTimetableNotificationsSoundEnabled(enabled);
                };

                native.setFeatures = function setFeatures(jsonFeatures) {
                    MyWarwickAndroid.setFeatures(jsonFeatures);
                };

                native.openMailApp = function openMailApp(externalApp) {
                    if (externalApp === \'mail\') {
                        MyWarwickAndroid.openEmailApp();
                    } else if (externalApp === \'outlook\') {
                        MyWarwickAndroid.openOutlookApp();
                    }
                };

                native.openAlarmsSettings = function openAlarmsSettings() {
                    if (MyWarwickAndroid.openAlarmsSettings) {
                        MyWarwickAndroid.openAlarmsSettings();
                    }
                }
            }
        })(window);
    </string>
    <string name="please_connect_heading">Cannot connect to My&#160;Warwick</string>
    <string name="please_connect_text">My Warwick needs to download additional content before it can be used offline. Please connect to the Internet.</string>
    <string name="edit">Edit</string>
    <string name="okay_ask">Okay</string>
    <string name="location_dialog_title">My&#160;Warwick would like to access your location</string>
    <string name="location_dialog_message">We\'ll use this to show your location on the campus map, and to provide location-related information.</string>
    <string name="skip">Skip</string>
    <string name="tour_finish">That\'s it! We hope you enjoy My Warwick. Touch \'Finish\' when you\'re done with this tour.</string>
    <string name="tour_feedback">At any time, if you have any problems using the app, or you have an idea you\'d like to tell us, touch the feedback button to send us a message.</string>
    <string name="tour_search">Find web pages, see buildings and rooms on the campus map, get peoples\' contact details, search the Library catalogue and more.</string>
    <string name="tour_news">A personalised list of news items. You can select which categories of news you\'d like to see.</string>
    <string name="tour_activity">A summary of tasks that you\'ve completed, like submitting your assignment or filling in a form.</string>
    <string name="tour_notifications">Just-in-time reminders like Submit your coursework or Return your library books. Alerts pop up on your phone\'s lock screen like messages, with a history on this screen in the app</string>
    <string name="tour_me">Tiles on your \'Me\' screen give you a quick summary of things that are relevant to you. You can resize and rearrange the tiles to suit your needs.</string>
    <string name="tour_title_me">\'Me\' screen</string>
    <string name="tour_welcome">My Warwick is your window into lots of different activities at Warwick. Here you can get coursework reminders, see traffic alerts, use our interactive map, search for people, web pages and much more. Take a tour…</string>
    <string name="tour_title_welcome">Welcome to My Warwick</string>
    <string name="finish">Finish</string>
    <string name="account_photo_description">A picture of you</string>
    <string name="tsa_copied">Two-step code copied to clipboard.</string>
</resources>
